Scrolling through blocks to place

--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
       <div id="hud-world-pos">World: (0, 0, 0)</div>
       <div id="hud-chunk-pos">Chunk: (0, 0) Local: (0, 0)</div>
       <div id="hud-fps">FPS: 0</div>
+      <div id="hud-selected-block">Block: GRASS</div>
     </div>
   </div>
   <script type="module" src="/src/main.js"></script>
