More blocks in world

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
     <div id="instructions">
       <div>WASD - Move | Space - Jump | Mouse - Look Around</div>
       <div>Left Click - Break Block | Right Click - Place Block</div>
+      <div>Scroll Wheel - Change Block</div>
     </div>
     <div id="hud">
       <div id="hud-world-pos">World: (0, 0, 0)</div>
