--- a/index.html
+++ b/index.html
@@ -18,14 +18,13 @@
 
     #canvas-container {
       width: 100vw;
-      height: 100vh;
+      height: 100dvh;
       position: relative;
     }
 
     #crosshair {
       position: absolute;
-      top: 50%;
-      left: 50%;
+      inset: 50% auto auto 50%;
       transform: translate(-50%, -50%);
       width: 20px;
       height: 20px;
@@ -82,8 +81,129 @@
       line-height: 1.6;
     }
 
+    /* Touch device styles */
+    body.touch-device #instructions {
+      display: none;
+    }
+
+    body.touch-device #hud {
+      top: 0;
+      left: 0;
+      right: auto;
+      padding: 0;
+      border-radius: 0;
+      background: rgba(0, 0, 0, 0.7);
+    }
+
+    body.touch-device #hud-chunk-pos {
+      display: none;
+    }
+
     #hud div {
       margin: 2px 0;
+    }
+
+    /* Touch Controls */
+    #touch-joystick-container {
+      position: fixed;
+      bottom: 40px;
+      left: 40px;
+      width: 150px;
+      height: 150px;
+      z-index: 1000;
+      display: none;
+      touch-action: none;
+    }
+
+    .touch-button {
+      position: fixed;
+      width: 60px;
+      height: 60px;
+      border-radius: 12px;
+      background: rgba(0, 0, 0, 0.5);
+      border: 3px solid rgba(255, 255, 255, 0.7);
+      color: white;
+      font-size: 24px;
+      font-weight: bold;
+      display: none;
+      align-items: center;
+      justify-content: center;
+      z-index: 1000;
+      touch-action: none;
+      user-select: none;
+      -webkit-user-select: none;
+      cursor: pointer;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+      transition: opacity 0.1s;
+    }
+
+    .touch-button:active {
+      opacity: 0.6;
+    }
+
+    #touch-jump-btn {
+      bottom: 90px;
+      right: 70px;
+    }
+
+    #touch-place-btn {
+      bottom: 200px;
+      right: 150px;
+    }
+
+    #touch-break-btn {
+      bottom: 200px;
+      right: 85px;
+    }
+
+    #touch-cycle-btn {
+      bottom: 200px;
+      right: 20px;
+    }
+
+    @media (max-width: 480px) {
+      /* #touch-joystick-container {
+        bottom: 60px;
+        left: 60px;
+        width: 100px;
+        height: 100px;
+      }
+
+      #touch-joystick-base {
+        width: 100px;
+        height: 100px;
+      }
+
+      #touch-joystick-handle {
+        width: 50px;
+        height: 50px;
+      } */
+
+      .touch-button {
+        width: 50px;
+        height: 50px;
+        font-size: 20px;
+      }
+
+      #touch-jump-btn {
+        bottom: 160px;
+        right: 15px;
+      }
+
+      #touch-place-btn {
+        bottom: 60px;
+        right: 15px;
+      }
+
+      #touch-break-btn {
+        bottom: 60px;
+        right: 80px;
+      }
+
+      #touch-cycle-btn {
+        bottom: 110px;
+        right: 47px;
+      }
     }
   </style>
 </head>
@@ -101,6 +221,14 @@
       <div id="hud-fps">FPS: 0</div>
       <div id="hud-selected-block">Block: GRASS</div>
     </div>
+    
+    <!-- Touch Controls -->
+    <div id="touch-joystick-container"></div>
+    
+    <button id="touch-jump-btn" class="touch-button">↑</button>
+    <button id="touch-place-btn" class="touch-button">+</button>
+    <button id="touch-break-btn" class="touch-button">-</button>
+    <button id="touch-cycle-btn" class="touch-button">◄</button>
   </div>
   <script type="module" src="/src/main.js"></script>
 </body>
