--- a/index.html
+++ b/index.html
@@ -205,6 +205,60 @@
         right: 47px;
       }
     }
+
+    /* Pause Menu */
+    #pause-menu {
+      position: fixed;
+      inset: 0;
+      display: none;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      z-index: 2000;
+      pointer-events: auto;
+    }
+
+    #pause-menu-content {
+      background: rgba(0, 0, 0, 0.7);
+      border: 2px solid rgba(255, 255, 255, 0.3);
+      border-radius: 10px;
+      padding: 40px 60px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
+    }
+
+    #pause-menu h2 {
+      color: white;
+      font-size: 32px;
+      margin-bottom: 40px;
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    }
+
+    .pause-menu-button {
+      background: rgba(255, 255, 255, 0.1);
+      border: 2px solid rgba(255, 255, 255, 0.3);
+      color: white;
+      padding: 15px 40px;
+      margin: 5px;
+      font-size: 18px;
+      cursor: pointer;
+      border-radius: 5px;
+      transition: all 0.2s;
+      min-width: 200px;
+      font-family: Arial, sans-serif;
+    }
+
+    .pause-menu-button:hover {
+      background: rgba(255, 255, 255, 0.2);
+      border-color: rgba(255, 255, 255, 0.5);
+      transform: scale(1.05);
+    }
+
+    .pause-menu-button:active {
+      transform: scale(0.98);
+    }
   </style>
 </head>
 <body>
@@ -229,6 +283,16 @@
     <button id="touch-place-btn" class="touch-button">+</button>
     <button id="touch-break-btn" class="touch-button">-</button>
     <button id="touch-cycle-btn" class="touch-button">◄</button>
+    
+    <!-- Pause Menu -->
+    <div id="pause-menu">
+      <div id="pause-menu-content">
+        <h2>Paused</h2>
+        <button id="pause-resume-btn" class="pause-menu-button">Resume</button>
+        <button id="pause-controls-btn" class="pause-menu-button">Controls</button>
+        <button id="pause-info-btn" class="pause-menu-button">Info & Changelog</button>
+      </div>
+    </div>
   </div>
   <script type="module" src="/src/main.js"></script>
 </body>
