--- a/index.html
+++ b/index.html
@@ -227,6 +227,8 @@
       flex-direction: column;
       align-items: center;
       box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
+      max-height: 90vh;
+      max-width: 90vw;
     }
 
     #pause-menu-screen {
@@ -317,6 +319,62 @@
     #controls-back-btn {
       margin-top: 30px;
     }
+
+    /* Changelog Screen */
+    #changelog-screen {
+      display: none;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+      height: 100%;
+      max-height: 85vh;
+    }
+
+    #changelog-screen h2 {
+      color: white;
+      font-size: 32px;
+      margin-bottom: 20px;
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    }
+
+    #changelog-content {
+      width: 100%;
+      max-width: 600px;
+      max-height: calc(85vh - 120px);
+      overflow-y: auto;
+      overflow-x: hidden;
+      color: white;
+      font-size: 14px;
+      line-height: 1.6;
+      padding: 15px;
+      background: rgba(0, 0, 0, 0.3);
+      border-radius: 5px;
+      white-space: pre-wrap;
+      word-wrap: break-word;
+      font-family: Consolas, Menlo, monospace;
+    }
+
+    #changelog-content::-webkit-scrollbar {
+      width: 8px;
+    }
+
+    #changelog-content::-webkit-scrollbar-track {
+      background: rgba(0, 0, 0, 0.2);
+      border-radius: 4px;
+    }
+
+    #changelog-content::-webkit-scrollbar-thumb {
+      background: rgba(255, 255, 255, 0.3);
+      border-radius: 4px;
+    }
+
+    #changelog-content::-webkit-scrollbar-thumb:hover {
+      background: rgba(255, 255, 255, 0.5);
+    }
+
+    #changelog-back-btn {
+      margin-top: 20px;
+    }
   </style>
 </head>
 <body>
@@ -359,6 +417,13 @@
           <h2>Controls</h2>
           <div id="controls-list"></div>
           <button id="controls-back-btn" class="pause-menu-button">Back</button>
+        </div>
+        
+        <!-- Changelog Screen -->
+        <div id="changelog-screen">
+          <h2>Changelog</h2>
+          <div id="changelog-content">Loading...</div>
+          <button id="changelog-back-btn" class="pause-menu-button">Back</button>
         </div>
       </div>
     </div>
