Improved memory usage

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ThreeCraft - Minecraft Clone</title>
+  <title>threecraft</title>
   <style>
     * {
       margin: 0;
@@ -79,6 +79,7 @@
       z-index: 100;
       pointer-events: none;
       line-height: 1.6;
+      will-change: contents;
     }
 
     /* Touch device styles */
@@ -101,6 +102,7 @@
 
     #hud div {
       margin: 2px 0;
+      will-change: contents;
     }
 
     /* Touch Controls */
